--- a/serverless_llm_assistant/lib/lambda-functions/agent-executor-lambda-container/requirements.txt
+++ b/serverless_llm_assistant/lib/lambda-functions/agent-executor-lambda-container/requirements.txt
@@ -3,6 +3,6 @@ boto3>=1.28.57
 botocore>=1.31.57
 langchain
 langchain-community
-duckduckgo-search
+duckduckgo-search==5.3.0
 psycopg2-binary
 pgvector
