--- a/serverless_llm_assistant/lib/lambda-functions/agent-executor-lambda-container/requirements.txt
+++ b/serverless_llm_assistant/lib/lambda-functions/agent-executor-lambda-container/requirements.txt
@@ -2,9 +2,11 @@
 boto3>=1.28.57
 botocore>=1.31.57
 langchain==0.2.1
-langchain-aws
+langchain-aws==0.1.6
 langchain-community==0.2.1
 duckduckgo-search==5.3.0
-psycopg2-binary
-pgvector
+langchain_postgres==0.0.6
+psycopg2-binary==2.9.9
+pgvector==0.2.5
 beautifulsoup4==4.12.3
+sqlalchemy==2.0.30
