--- a/frontend/chat-app/package.json
+++ b/frontend/chat-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.0.7",
     "@heroicons/react": "^2.1.1",
+    "@tailwindcss/typography": "^0.5.13",
     "aws-amplify": "^6.0.12",
     "next": "^14.1.1",
     "react": "^18",
