Adjust amplify monorepo config

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,23 +1,30 @@
-
-# https://docs.aws.amazon.com/amplify/latest/userguide/deploy-nextjs-app.html
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - cd frontend/chat-app
-        - ls -alh
-        - node -v
-        - npm -v
-        - npm ci
-    build:
-      commands:
-        - npm run build
-        - ls -alh .next
-  artifacts:
-    baseDirectory: frontend/chat-app/.next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - frontend/chat-app/node_modules/**/*
+applications:
+  - appRoot: frontend/chat-app
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - ls -alh
+            - node -v
+            - npm -v
+            - npm ci
+        build:
+          commands:
+            - env | grep -e NEXT_PUBLIC_ >> .env.production
+            - npm run build
+            - ls -alh .next
+            - ls -alh .
+      artifacts:
+        baseDirectory: .next
+        files:
+          - "**/*"
+      cache:
+        paths:
+          - node_modules/**/*
+          - .next/cache/**/*
+    backend:
+      phases:
+        build:
+          commands:
+            - amplifyPush --simple
