--- a/frontend/chat-app/package.json
+++ b/frontend/chat-app/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.0.7",
-    "@heroicons/react": "^2.1.1",
+    "@tabler/icons-react": "^3.21.0",
     "@tailwindcss/typography": "^0.5.13",
     "aws-amplify": "^6.0.12",
     "next": "^14.2.10",
